--- a/index.html
+++ b/index.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HANGMAN</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>HANGMAN</title>
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
-  <h1>Hangman!</h1>
-  <h2>Press Any Key To Guess a Letter</h2>
-  <div id="wordDisp"></div>
-  <h2 id="usedDisp"></h2>
-  <div id="hangmanImage">
-    <img id="gameImage" src="">
+<div class="container">
+
+	<div class="jumbotron">
+	  <h1>Hangman!<small><br>Save infamous serial killers from the gallows..</small></h1>
+	</div>
+
+<div class="panel panel-danger">
+  <div class="panel-heading">
+    <h2 class="panel-title">Press Any Key To Guess a Letter</h2>
   </div>
+  <div class="panel-body">
+	  <div id="wordDisp"></div>
+	  <h2 id="usedDisp"></h2>
+	  <div id="hangmanImage">
+	    <img id="gameImage" src="">
+	  </div>
+  </div>
+</div>
+
+  
+
+
+</div>
+
    <script src="javascript/hangman.js"></script>
+
 </body>
-</html>
+</html> 	
